.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Service_Alert__c.object
<CustomObject>
    <description>Contains data of service alerts which will be used to show data in web portal or mobile for users based on start date and end date.</description>
    <fields>
        <fullName>Incap311__End_Date__c</fullName>
        <description>This is used when the message needs to be appear till specific date.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to set the privacy of the message</description>
        <label>Is Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Message_Body__c</fullName>
        <description>This field contains message alerts or news which will be displayed on the portal or mobile application.</description>
        <label>Message Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Incap311__Start_Date__c</fullName>
        <description>This date is used when the message will start displaying on the portal.</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Service Alert</label>
    <listViews>
        <fullName>Incap311__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>